[gd_scene load_steps=8 format=3 uid="uid://c36x5w6hobq86"]

[ext_resource type="Script" path="res://bases/player_base.gd" id="1_25s31"]
[ext_resource type="Texture2D" uid="uid://c1xsucbfkbfiv" path="res://age of war sprites/bases/cave/base/base.png" id="2_t4o2h"]
[ext_resource type="Texture2D" uid="uid://clxxa7qqv10di" path="res://age of war sprites/bases/cave/tower_base/base_tower_bottom.png" id="3_q1xho"]
[ext_resource type="Texture2D" uid="uid://d1sj5rlj0tqvf" path="res://age of war sprites/bases/cave/tower_part/base_tower_part0001.png" id="4_07h3k"]
[ext_resource type="Texture2D" uid="uid://caxi44uddr1wf" path="res://age of war sprites/bases/cave/tower_top/base_tower_top0001.png" id="5_v817d"]
[ext_resource type="Theme" uid="uid://c4l0arxjc7n78" path="res://bases/base_button_theme.tres" id="6_8jc8w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s853"]
size = Vector2(312, 183)

[node name="player_base" type="StaticBody2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_25s31")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -123)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_t4o2h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -91.5)
shape = SubResource("RectangleShape2D_2s853")

[node name="tower_bottom" type="Sprite2D" parent="."]
visible = false
position = Vector2(51, -280)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_q1xho")

[node name="tower_part" type="Sprite2D" parent="."]
visible = false
position = Vector2(62, -373)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_07h3k")

[node name="tower_top" type="Sprite2D" parent="."]
visible = false
position = Vector2(62, -485)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_v817d")

[node name="Button_tower_base" type="Button" parent="."]
z_index = 15
custom_minimum_size = Vector2(32, 32)
offset_left = 42.0
offset_top = -199.0
offset_right = 74.0
offset_bottom = -167.0
focus_mode = 0
theme = ExtResource("6_8jc8w")
disabled = true

[node name="Button_tower_bottom" type="Button" parent="."]
z_index = 15
custom_minimum_size = Vector2(32, 32)
offset_left = 42.0
offset_top = -279.0
offset_right = 74.0
offset_bottom = -247.0
focus_mode = 0
theme = ExtResource("6_8jc8w")
disabled = true

[node name="Button_tower_part" type="Button" parent="."]
z_index = 15
custom_minimum_size = Vector2(32, 32)
offset_left = 42.0
offset_top = -375.0
offset_right = 74.0
offset_bottom = -343.0
focus_mode = 0
theme = ExtResource("6_8jc8w")
disabled = true

[node name="Button_tower_top" type="Button" parent="."]
z_index = 15
custom_minimum_size = Vector2(32, 32)
offset_left = 42.0
offset_top = -470.0
offset_right = 74.0
offset_bottom = -438.0
focus_mode = 0
theme = ExtResource("6_8jc8w")
disabled = true

[node name="Label" type="Label" parent="."]
offset_left = -70.0
offset_top = -214.0
offset_right = -30.0
offset_bottom = -191.0
text = "999"

[connection signal="pressed" from="Button_tower_base" to="." method="_on_button_tower_base_pressed"]
[connection signal="pressed" from="Button_tower_bottom" to="." method="_on_button_tower_bottom_pressed"]
[connection signal="pressed" from="Button_tower_part" to="." method="_on_button_tower_part_pressed"]
[connection signal="pressed" from="Button_tower_top" to="." method="_on_button_tower_top_pressed"]
